Criando menu e classe Serie